# gnome-globalmenu

./: .gitignore  AUTHORS  ChangeLog  ClassMap.dia  GPLv3  Makefile.am  Makefile.config  Makefile.configmake  Makefile.decl  Makefile.licenses  Makefile.sanity  README  README.GNOME  README.LEGACY  README.XFCE  autogen.sh  configure.ac  globalmenu.sh  gnome-globalmenu.1  gnome-globalmenu.doap  gnome-globalmenu.schemas  gnome-globalmenu.schemas.in  gnome-globalmenu.spec  gnome-globalmenu.spec.in  gnome-globalmenu.spec.tmpl  libgnomenu-rhel5.patch  libtool  org.globalmenu.gschema.xml  org.globalmenu.manager.service.in  patch.sh  patch.sh.in  rpm  runtest.sh
applet/: .gitignore  GPL.vala  GlobalMenu_PanelApplet.server.in  GlobalMenu_PanelApplet.server.in.in  Makefile.am  WindowActionMenu.vala  applet-c.c  applet.vala  application.vala  bindings.vapi  bonobo  globalmenu.fla  gnome-globalmenu-applet.schemas  gnomemenuhelper.vala  gtkextra-gconfdialog.vala  launcher.vala  libpanelapplet-2.0.vapi  main.vala  menubars.vala  monitor.vala  panelextra-menubar.vala  panelextra-switcher.vala  patch.sh  patchlibapplet.sh  switcher-icons.vala  switcher.vala  task-utils-c.c  template.vala  wncktools-ccode.c  wncktools.vala  workspaceselector.vala  x-utils-c.c
dom/: Makefile.am  dom-1.0.pc.in  dom-attr.vala  dom-element.vala  dom-error.vala  dom-extended.vala
dom/dom/: Makefile.am  dom-attr.vala  dom-comment.vala  dom-document.vala  dom-documentfragment.vala  dom-element.vala  dom-error.vala  dom-extended.vala  dom-node.vala  dom-serializer.vala  dom-tostring.vala  dom-visitor.vala  patch.sh
dom/tests/: Makefile.am  test-document.vala  test-documentfragment.vala  test-element.vala  test-memory.vala  test-node.vala  test-serializer.vala  test-text.vala  test-tostring.vala  test.vala
extension/: GlobalMenuGnomeShell-1.0.gir  Makefile.am  extension.js  extension.js.in  metadata.json  stylesheet.css
gee/: ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  configure.ac  dom-gee-1.0.pc.in  gee-1.0.pc.in
gee/gee/: Makefile.am  arraylist.vala  gee.h  hashmap.vala  hashset.vala  iterator.vala  list.vala  map.vala  (+4 more)
globalmenu-gnome-panel/: Makefile.am  module-main.vala
globalmenu-plugin/: .gitignore  Makefile.am  agent-factory.vala  agent.vala  gtk-menubar.vala  gtk-widget.vala  info-factory.vala  info.vala  locator.vala  module-main.vala  patcher.vala  serializer.vala  superrider.vala
gnome-applet/: Makefile.am  gnome-globalmenu-applet.schemas.in  intl.h  log.h  main-gnome.c
gnome-globalmenu-applet/: Makefile.am  application.c  application.h  bonobo-server.sh.in  log.h  main.c
gnome2-globalmenu-applet/: .tm_project2.cache  AUTHORS  ChangeLog  GNOME_GlobalMenuApplet.server.sample  Makefile  Makefile.am  Makefile.in  README  bonobo-server.sh.in  config.h  config.status  configure  configure.ac  configure.ac.bak  dist.sh.in  gnome2-globalmenu-applet.desktop.in  gnome2-globalmenu-applet.schema.in  gnome2-globalmenu-applet.spec  gnome2-globalmenu-applet.spec.in  intltool-merge  libtool
gnome2-globalmenu-test/: .tm_project2.cache  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
gtk+-aqd/: Makefile.am  README  gtk2-aqd.spec  overflow.diff  overflow.patch  patch.diff  rpm  test
legacy-support/: .gitignore  Makefile.am  gtk-fake.h  patch.sh
libcompat/: Makefile.am  ghash-backport.c  ghash-backport.h  gmarkup-backport.h  libcompat.h  libcompat.vapi  wnck-fake.c  wnck-fake.h
libgmarkupdoc/: Makefile.am  dom-attr.vala  dom-characterdata.vala  dom-document.vala  dom-element.vala  dom-node.vala  dom-text.vala  gmarkupdoc-dbusview.vala  gmarkupdoc-document.vala  gmarkupdoc-documentmodel.vala  gmarkupdoc-documenttreeadapter.vala  gmarkupdoc-listview.vala  gmarkupdoc-node.vala  gmarkupdoc-parser.vala  gmarkupdoc-remotedocument.vala  gmarkupdoc-section.vala  gmarkupdoc-view.vala  gmarkupdoc.vala  xml.vala  xmlparser.vala
libgmarkupdoc-utils/: Makefile.am  document.vala
libgnome-globalmenu/: Makefile.am  Makefile.in  aclocal.m4  configure.ac
libgnomenu/: .gitignore  Gnomenu-1.0.gir  Gnomenu.gir  Makefile.am  adapter.vala  application.vala  binding-gtk.c  binding-gtk.h  bindinggtk.vala  bindinggtkclient.vala  bindinggtknavigator.vala  bindinggtknodefactory.vala  bindinggtksingleton.vala  bindings.vapi  box.vala  builder.c  builder.h  busagent.vala  busobject.vala  client.vala  clienthelper.c  clienthelper.h  connection.c  connection.h  dbusview.vala  document.vala  example.c  gdk.vapi  gdksocket-marshall.list  gdksocket.c  gdksocket.h  globalmenu.c  globalmenu.h  globalmenu.vala  globalmenuadapter.vala  globalmenubar.vala  globalmenuitem.vala  gmarkup-backport.c  gmarkup-backport.h  gnomenu-call.c  (+111 more)
libgnomenu-gtk/: Makefile.am  agentgtk.vala  busagentgtk.vala  main.vala
libgnomenugtk/: Makefile.am  bindinggtk-c.c  bindinggtk.vala  bindinggtkdocument.vala  bindinggtksingleton.vala  gnomenugtk-document.vala  gnomenugtk-singleton.vala  gnomenugtk.vala  gtkaqd.vapi  utils.c
libgnomenuqt/: CMakeLists.txt  app-document.cpp  app-document.h  app-model.cpp  app-model.h  plasma-applet-globalmenu.desktop  plasma-globalmenu.cpp  plasma-globalmenu.h  server.cpp  server.h
libgtkhotkey/: Makefile.am  gtk-hotkey-error.c  gtk-hotkey-error.h  gtk-hotkey-info.c  gtk-hotkey-info.h  gtk-hotkey-key-file-registry.c  gtk-hotkey-key-file-registry.h  gtk-hotkey-listener.c  gtk-hotkey-listener.h  gtk-hotkey-marshal.c  gtk-hotkey-marshal.h  gtk-hotkey-private.h  gtk-hotkey-registry.c  gtk-hotkey-registry.h  gtk-hotkey-utils.c  gtk-hotkey-utils.h  gtk-hotkey-x11-listener.c  gtk-hotkey-x11-listener.h  gtkhotkey.h
libserver/: .gitignore  Makefile.am  adapter.vala  bindings.vapi  globalmenu-server.deps  globalmenu-server.pc.in  globalmenubar.vala  gnomeglobalmenu-server.pc.in  monitor.vala  parser.vala  serializer.vala  window.vala
libsettings/: .gitignore  Makefile.am  global-settings.vala  globalmenu-settings.deps  local-settings.vala  settings.vala
navigator/: Makefile.am  navigator.vala
reference/: Makefile.am
schemas/: Makefile.am  gnome-globalmenu.schemas.in
(+449 files in other folders)
